--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Infracost Files
+.infracost/pricing.gob
+.infracost/terraform_modules/manifest.json
+
 # Local .terraform directories
 **/.terraform/*
 
