--- a/.infracost/terraform_modules/manifest.json
+++ b/.infracost/terraform_modules/manifest.json
@@ -1,1 +1,1 @@
-{"Path":".","Version":"2.0","Modules":[]}
+{"Path":"/Users/stanislas.quastana/Simple-Landing-Zone-for-NC2-on-Azure","Version":"2.0","Modules":[]}
